# Argus-

./: .env.example  .gitignore  .gitleaks.toml  ARCHITECTURE_BOUNDARIES.md  ARGUS-AUTONOMOUS-AUTH-IMPLEMENTATION-PLAN.md  ARGUS_IMPROVEMENT_ROADMAP.md  ARGUS_PRODUCT_IDENTITY_MIGRATION.md  Argus_Improvement_Plan.docx  Argus_ReAct_Agent_Implementation_Plan_FINAL.md  Argus_Scanning_Improvements.docx  Argus_Scanning_Improvements.md  CONTRIBUTING.md  DEPLOYMENT.md  FINAL-ARCHITECTURE.md  IMPROVEMENTS.md  LICENSE  MASTER_CODABASE_AUDIT.md  Makefile  README.md  REASSESSMENT_VERIFICATION_REPORT.md  SCAN_FUNCTIONALITY_AUDIT_RESULTS.md  argus-improvement-roadmap-27f7c2.md  argus.config.yaml  argus_agent_runtime_refactor_master_spec.md  argus_diff_plan.js  auth-test.js  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  check-engagement.js  create-engagements.js  dashboard  docker-compose.override.yml  docker-compose.yml  google-stitch-functional-prompt.md  progress.md  reset-password.js  start-argus.sh  stop-argus.sh  task_plan.md
.github/: dependabot.yml
.next/: trace  trace-build
Argus-Tui/: .gitignore  AGENTS.md  package-lock.json  package.json  tui-redesign-plan.md  turbo.json
architectural analysis/: cortexai-architecture-analysis.md  (+3 more)
argus-cli/: MIGRATION_STATUS.md  README.md  pyproject.toml
argus-cli/argus_cli/: __init__.py  __main__.py  crypto.py  main.py
argus-cli/argus_cli/commands/: registry.py
argus-cli/argus_cli/config/: settings.py
argus-cli/argus_cli/core/: banner.py  constants.py  providers.py  runner.py
argus-cli/argus_cli/security/: bridge.py
argus-cli/argus_cli/session/: manager.py
argus-cli/argus_cli/streaming/: manager.py
argus-cli/argus_cli/tui/: argus_app.py  widgets.py
argus-cli/tests/: test_cli_e2e.py  test_config.py  test_constants.py  test_main.py  test_providers.py  test_runner.py  test_security_bridge.py  test_session.py  test_settings.py  test_streaming.py  test_tui.py
argus-workers/tool_core/: __init__.py  _compat.py  base.py  finding_builder.py  health_checker.py  pyproject.toml  registry.py  result.py  sandbox.py  storage.py
argus-workers/tool_core/config/: __init__.py  models.py
argus-workers/tool_core/parser/: __init__.py  dispatcher.py  normalizer.py  types.py
argus-workers/tool_core/parser/parsers/: __init__.py  generic.py  gitleaks.py  nikto.py  nmap.py  nuclei.py  semgrep.py  sqlmap.py  whatweb.py
argus-workers/tool_core/sandbox/: Dockerfile  Makefile  __init__.py  client.py  runner.py
argus-workers/tool_core/validators/: __init__.py  args.py  scope.py
(+1381 files in other folders)
