[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-cli"
version = "4.0.0-alpha.1"
description = "Argus Security AI Agent — Terminal-first security testing platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Argus Team"},
]
keywords = ["security", "pentest", "cli", "ai", "agent", "vulnerability", "scanning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
]

dependencies = [
    "textual>=0.52.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "platformdirs>=4.0.0",
    "toml>=0.10.2",
    "python-dotenv>=1.0.0",
    "prompt-toolkit>=3.0.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "textual-dev>=1.0.0",
]

[project.scripts]
argus = "argus_cli.main:main"

[project.urls]
Homepage = "https://github.com/Olamzkid2005/Argus-"
Documentation = "https://docs.argus.security"
Repository = "https://github.com/Olamzkid2005/Argus-.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["argus_cli*"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "ARG001", "ARG002", "B023"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
